I added an icon and also added this project was created bt Taiwo Joshua

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="./simone-secci-49uySSA678U-unsplash.jpg">
     <script src="./jquery.js"></script>
     <title>Guess the Name</title>
 </head>
 <body>
     <div class="pagew">
         <div class="bodyw">
-            <h1 class="welcome none" id="tjg">TeeJay Games</h1>
+            <h1 class="welcome nones" id="tjg">TeeJay Games</h1>
             <h1 class="welcome none" id="present">Presents</h1>
             <h1 class="welcome none" id="game">Guess The Name</h1>
             <div id="open" class="none">
@@ -120,6 +121,7 @@
                 GAME OVER
             </div>
         </div>
+        <p id="maintain">This project was built and is being maintained by <a href="https://taiwojoshua.netlify.app/" target="_blank">Taiwo Joshua</a></p>
     </div>
     <script src="./names.js"></script>
     <script src="./index.js"></script>
