I uncommented my javascript and added display none to TeeJay Games

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="pagew">
         <div class="bodyw">
-            <h1 class="welcome nones" id="tjg">TeeJay Games</h1>
+            <h1 class="welcome none" id="tjg">TeeJay Games</h1>
             <h1 class="welcome none" id="present">Presents</h1>
             <h1 class="welcome none" id="game">Guess The Name</h1>
             <div id="open" class="none">
