--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         </div>
         <p id="maintain">This project was built and is being maintained by <a href="https://taiwojoshua.netlify.app/" target="_blank">Taiwo Joshua</a></p>
     </div>
+    <script src="./confetti.js"></script>
     <script src="./names.js"></script>
     <script src="./index.js"></script>
 </body>
