I rearranged the files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="icon" href="./simone-secci-49uySSA678U-unsplash.jpg">
-    <script src="./jquery.js"></script>
+    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="icon" href="./assets/img/simone-secci-49uySSA678U-unsplash.jpg">
+    <script src="./assets/js/jquery.js"></script>
     <title>Guess the Name</title>
 </head>
 <body>
@@ -117,14 +117,19 @@
             <div id="winner" class="none">
 
             </div>
-            <div id="gover" class="none">
-                GAME OVER
+            <div>
+                <div id="gover" class="none">
+                    GAME OVER
+                </div>
+                <center>
+                    <button id="again" class="none">Play Again</button>
+                </center>
             </div>
         </div>
         <p id="maintain">This project was built and is being maintained by <a href="https://taiwojoshua.netlify.app/" target="_blank">Taiwo Joshua</a></p>
     </div>
-    <script src="./confetti.js"></script>
-    <script src="./names.js"></script>
-    <script src="./index.js"></script>
+    <script src="./assets/js/confetti.js"></script>
+    <script src="./assets/js/names.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 </html>
