I changed javascript to jquery

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div id="winner" class="none">
 
             </div>
-            <div>
+            <div id="over">
                 <div id="gover" class="none">
                     GAME OVER
                 </div>
